syntax = "proto3";

import "Protos/google/api/annotations.proto";
import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";
import "Protos/exception.proto";
option csharp_namespace = "PrdGrpcService";

package product;

service ProductOpr {
	rpc CreateProduct (ProductCreateRequest) returns (ProductCreateResponse) {
		option (google.api.http) = {
            post: "/product/CreateProduct"
            body: "*"
		};
	};
	rpc GetFilteredProducts (ProductListRequest) returns (ProductListResponse) {
		option (google.api.http) = {
            post: "/product/GetFilteredProducts"
            body: "*"
		};
	}
}

message ProductCreateRequest {
	string Name = 1;
    string CategoryGuId = 2;
    string SizeTypeGuId = 3;
}
message ProductCreateResponse {
    optional Product Data = 1;
    bool IsSuccess = 2;
    google.protobuf.Timestamp ResponseTime = 3;
    Exception Exception = 4;
}
message ProductListRequest {
	string Name = 1;
}
message ProductListResponse {
    repeated Product Data = 1;
    bool IsSuccess = 2;
    google.protobuf.Timestamp ResponseTime = 3;
    Exception Exception = 4;
}
message Product {
    string Guid = 1;
    string Name = 2;
    string CategoryGuId = 3;
    string SizeTypeGuId = 4;
    bool Status = 5;
    bool IsDeleted = 6;
}